Fix Flexbox Split Component vertical alignment

--- a/components/flexbox/_split.sass
+++ b/components/flexbox/_split.sass
@@ -15,6 +15,7 @@
 // *************************************
 
 .split
+  align-items: baseline
   display: flex
 
 // -------------------------------------
